Assembler/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> program instruction
Rule 2     program -> instruction
Rule 3     instruction -> IDENTIFIER COLOM
Rule 4     instruction -> NOP
Rule 5     instruction -> LW register NUMBER LBRACKET register RBRACKET
Rule 6     instruction -> SW register NUMBER LBRACKET register RBRACKET
Rule 7     instruction -> LUI register NUMBER
Rule 8     instruction -> ADD register register register
Rule 9     instruction -> ADDU register register register
Rule 10    instruction -> SUB register register register
Rule 11    instruction -> SUBU register register register
Rule 12    instruction -> ADDI register register NUMBER
Rule 13    instruction -> ADDIU register register NUMBER
Rule 14    instruction -> AND register register register
Rule 15    instruction -> OR register register register
Rule 16    instruction -> XOR register register register
Rule 17    instruction -> NOR register register register
Rule 18    instruction -> ANDI register register NUMBER
Rule 19    instruction -> SLL register register NUMBER
Rule 20    instruction -> SRL register register NUMBER
Rule 21    instruction -> SRA register register NUMBER
Rule 22    instruction -> SLT register register register
Rule 23    instruction -> SLTI register register NUMBER
Rule 24    instruction -> SLTIU register register NUMBER
Rule 25    instruction -> BEQ register register IDENTIFIER
Rule 26    instruction -> BNE register register IDENTIFIER
Rule 27    instruction -> BLEZ register IDENTIFIER
Rule 28    instruction -> BGTZ register IDENTIFIER
Rule 29    instruction -> BLTZ register IDENTIFIER
Rule 30    instruction -> J IDENTIFIER
Rule 31    instruction -> JAL IDENTIFIER
Rule 32    instruction -> JR register
Rule 33    instruction -> JALR register register
Rule 34    register -> REGPREFIX NUMBER

Terminals, with rules where they appear

ADD                  : 8
ADDI                 : 12
ADDIU                : 13
ADDU                 : 9
AND                  : 14
ANDI                 : 18
BEQ                  : 25
BGTZ                 : 28
BLEZ                 : 27
BLTZ                 : 29
BNE                  : 26
COLOM                : 3
IDENTIFIER           : 3 25 26 27 28 29 30 31
J                    : 30
JAL                  : 31
JALR                 : 33
JR                   : 32
LBRACKET             : 5 6
LUI                  : 7
LW                   : 5
NOP                  : 4
NOR                  : 17
NUMBER               : 5 6 7 12 13 18 19 20 21 23 24 34
OR                   : 15
RBRACKET             : 5 6
REGPREFIX            : 34
SLL                  : 19
SLT                  : 22
SLTI                 : 23
SLTIU                : 24
SRA                  : 21
SRL                  : 20
SUB                  : 10
SUBU                 : 11
SW                   : 6
XOR                  : 16
error                : 

Nonterminals, with rules where they appear

instruction          : 1 2
program              : 1 0
register             : 5 5 6 6 7 8 8 8 9 9 9 10 10 10 11 11 11 12 12 13 13 14 14 14 15 15 15 16 16 16 17 17 17 18 18 19 19 20 20 21 21 22 22 22 23 23 24 24 25 25 26 26 27 28 29 32 33 33

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program instruction
    (2) program -> . instruction
    (3) instruction -> . IDENTIFIER COLOM
    (4) instruction -> . NOP
    (5) instruction -> . LW register NUMBER LBRACKET register RBRACKET
    (6) instruction -> . SW register NUMBER LBRACKET register RBRACKET
    (7) instruction -> . LUI register NUMBER
    (8) instruction -> . ADD register register register
    (9) instruction -> . ADDU register register register
    (10) instruction -> . SUB register register register
    (11) instruction -> . SUBU register register register
    (12) instruction -> . ADDI register register NUMBER
    (13) instruction -> . ADDIU register register NUMBER
    (14) instruction -> . AND register register register
    (15) instruction -> . OR register register register
    (16) instruction -> . XOR register register register
    (17) instruction -> . NOR register register register
    (18) instruction -> . ANDI register register NUMBER
    (19) instruction -> . SLL register register NUMBER
    (20) instruction -> . SRL register register NUMBER
    (21) instruction -> . SRA register register NUMBER
    (22) instruction -> . SLT register register register
    (23) instruction -> . SLTI register register NUMBER
    (24) instruction -> . SLTIU register register NUMBER
    (25) instruction -> . BEQ register register IDENTIFIER
    (26) instruction -> . BNE register register IDENTIFIER
    (27) instruction -> . BLEZ register IDENTIFIER
    (28) instruction -> . BGTZ register IDENTIFIER
    (29) instruction -> . BLTZ register IDENTIFIER
    (30) instruction -> . J IDENTIFIER
    (31) instruction -> . JAL IDENTIFIER
    (32) instruction -> . JR register
    (33) instruction -> . JALR register register

    IDENTIFIER      shift and go to state 13
    NOP             shift and go to state 31
    LW              shift and go to state 11
    SW              shift and go to state 28
    LUI             shift and go to state 8
    ADD             shift and go to state 21
    ADDU            shift and go to state 25
    SUB             shift and go to state 3
    SUBU            shift and go to state 15
    ADDI            shift and go to state 30
    ADDIU           shift and go to state 14
    AND             shift and go to state 24
    OR              shift and go to state 32
    XOR             shift and go to state 16
    NOR             shift and go to state 33
    ANDI            shift and go to state 10
    SLL             shift and go to state 20
    SRL             shift and go to state 19
    SRA             shift and go to state 7
    SLT             shift and go to state 17
    SLTI            shift and go to state 4
    SLTIU           shift and go to state 27
    BEQ             shift and go to state 9
    BNE             shift and go to state 23
    BLEZ            shift and go to state 6
    BGTZ            shift and go to state 22
    BLTZ            shift and go to state 1
    J               shift and go to state 18
    JAL             shift and go to state 29
    JR              shift and go to state 5
    JALR            shift and go to state 26

    program                        shift and go to state 12
    instruction                    shift and go to state 2

state 1

    (29) instruction -> BLTZ . register IDENTIFIER
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 34

state 2

    (2) program -> instruction .

    IDENTIFIER      reduce using rule 2 (program -> instruction .)
    NOP             reduce using rule 2 (program -> instruction .)
    LW              reduce using rule 2 (program -> instruction .)
    SW              reduce using rule 2 (program -> instruction .)
    LUI             reduce using rule 2 (program -> instruction .)
    ADD             reduce using rule 2 (program -> instruction .)
    ADDU            reduce using rule 2 (program -> instruction .)
    SUB             reduce using rule 2 (program -> instruction .)
    SUBU            reduce using rule 2 (program -> instruction .)
    ADDI            reduce using rule 2 (program -> instruction .)
    ADDIU           reduce using rule 2 (program -> instruction .)
    AND             reduce using rule 2 (program -> instruction .)
    OR              reduce using rule 2 (program -> instruction .)
    XOR             reduce using rule 2 (program -> instruction .)
    NOR             reduce using rule 2 (program -> instruction .)
    ANDI            reduce using rule 2 (program -> instruction .)
    SLL             reduce using rule 2 (program -> instruction .)
    SRL             reduce using rule 2 (program -> instruction .)
    SRA             reduce using rule 2 (program -> instruction .)
    SLT             reduce using rule 2 (program -> instruction .)
    SLTI            reduce using rule 2 (program -> instruction .)
    SLTIU           reduce using rule 2 (program -> instruction .)
    BEQ             reduce using rule 2 (program -> instruction .)
    BNE             reduce using rule 2 (program -> instruction .)
    BLEZ            reduce using rule 2 (program -> instruction .)
    BGTZ            reduce using rule 2 (program -> instruction .)
    BLTZ            reduce using rule 2 (program -> instruction .)
    J               reduce using rule 2 (program -> instruction .)
    JAL             reduce using rule 2 (program -> instruction .)
    JR              reduce using rule 2 (program -> instruction .)
    JALR            reduce using rule 2 (program -> instruction .)
    $end            reduce using rule 2 (program -> instruction .)


state 3

    (10) instruction -> SUB . register register register
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 36

state 4

    (23) instruction -> SLTI . register register NUMBER
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 37

state 5

    (32) instruction -> JR . register
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 38

state 6

    (27) instruction -> BLEZ . register IDENTIFIER
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 39

state 7

    (21) instruction -> SRA . register register NUMBER
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 40

state 8

    (7) instruction -> LUI . register NUMBER
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 41

state 9

    (25) instruction -> BEQ . register register IDENTIFIER
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 42

state 10

    (18) instruction -> ANDI . register register NUMBER
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 43

state 11

    (5) instruction -> LW . register NUMBER LBRACKET register RBRACKET
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 44

state 12

    (0) S' -> program .
    (1) program -> program . instruction
    (3) instruction -> . IDENTIFIER COLOM
    (4) instruction -> . NOP
    (5) instruction -> . LW register NUMBER LBRACKET register RBRACKET
    (6) instruction -> . SW register NUMBER LBRACKET register RBRACKET
    (7) instruction -> . LUI register NUMBER
    (8) instruction -> . ADD register register register
    (9) instruction -> . ADDU register register register
    (10) instruction -> . SUB register register register
    (11) instruction -> . SUBU register register register
    (12) instruction -> . ADDI register register NUMBER
    (13) instruction -> . ADDIU register register NUMBER
    (14) instruction -> . AND register register register
    (15) instruction -> . OR register register register
    (16) instruction -> . XOR register register register
    (17) instruction -> . NOR register register register
    (18) instruction -> . ANDI register register NUMBER
    (19) instruction -> . SLL register register NUMBER
    (20) instruction -> . SRL register register NUMBER
    (21) instruction -> . SRA register register NUMBER
    (22) instruction -> . SLT register register register
    (23) instruction -> . SLTI register register NUMBER
    (24) instruction -> . SLTIU register register NUMBER
    (25) instruction -> . BEQ register register IDENTIFIER
    (26) instruction -> . BNE register register IDENTIFIER
    (27) instruction -> . BLEZ register IDENTIFIER
    (28) instruction -> . BGTZ register IDENTIFIER
    (29) instruction -> . BLTZ register IDENTIFIER
    (30) instruction -> . J IDENTIFIER
    (31) instruction -> . JAL IDENTIFIER
    (32) instruction -> . JR register
    (33) instruction -> . JALR register register

    IDENTIFIER      shift and go to state 13
    NOP             shift and go to state 31
    LW              shift and go to state 11
    SW              shift and go to state 28
    LUI             shift and go to state 8
    ADD             shift and go to state 21
    ADDU            shift and go to state 25
    SUB             shift and go to state 3
    SUBU            shift and go to state 15
    ADDI            shift and go to state 30
    ADDIU           shift and go to state 14
    AND             shift and go to state 24
    OR              shift and go to state 32
    XOR             shift and go to state 16
    NOR             shift and go to state 33
    ANDI            shift and go to state 10
    SLL             shift and go to state 20
    SRL             shift and go to state 19
    SRA             shift and go to state 7
    SLT             shift and go to state 17
    SLTI            shift and go to state 4
    SLTIU           shift and go to state 27
    BEQ             shift and go to state 9
    BNE             shift and go to state 23
    BLEZ            shift and go to state 6
    BGTZ            shift and go to state 22
    BLTZ            shift and go to state 1
    J               shift and go to state 18
    JAL             shift and go to state 29
    JR              shift and go to state 5
    JALR            shift and go to state 26

    instruction                    shift and go to state 45

state 13

    (3) instruction -> IDENTIFIER . COLOM

    COLOM           shift and go to state 46


state 14

    (13) instruction -> ADDIU . register register NUMBER
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 47

state 15

    (11) instruction -> SUBU . register register register
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 48

state 16

    (16) instruction -> XOR . register register register
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 49

state 17

    (22) instruction -> SLT . register register register
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 50

state 18

    (30) instruction -> J . IDENTIFIER

    IDENTIFIER      shift and go to state 51


state 19

    (20) instruction -> SRL . register register NUMBER
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 52

state 20

    (19) instruction -> SLL . register register NUMBER
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 53

state 21

    (8) instruction -> ADD . register register register
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 54

state 22

    (28) instruction -> BGTZ . register IDENTIFIER
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 55

state 23

    (26) instruction -> BNE . register register IDENTIFIER
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 56

state 24

    (14) instruction -> AND . register register register
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 57

state 25

    (9) instruction -> ADDU . register register register
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 58

state 26

    (33) instruction -> JALR . register register
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 59

state 27

    (24) instruction -> SLTIU . register register NUMBER
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 60

state 28

    (6) instruction -> SW . register NUMBER LBRACKET register RBRACKET
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 61

state 29

    (31) instruction -> JAL . IDENTIFIER

    IDENTIFIER      shift and go to state 62


state 30

    (12) instruction -> ADDI . register register NUMBER
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 63

state 31

    (4) instruction -> NOP .

    IDENTIFIER      reduce using rule 4 (instruction -> NOP .)
    NOP             reduce using rule 4 (instruction -> NOP .)
    LW              reduce using rule 4 (instruction -> NOP .)
    SW              reduce using rule 4 (instruction -> NOP .)
    LUI             reduce using rule 4 (instruction -> NOP .)
    ADD             reduce using rule 4 (instruction -> NOP .)
    ADDU            reduce using rule 4 (instruction -> NOP .)
    SUB             reduce using rule 4 (instruction -> NOP .)
    SUBU            reduce using rule 4 (instruction -> NOP .)
    ADDI            reduce using rule 4 (instruction -> NOP .)
    ADDIU           reduce using rule 4 (instruction -> NOP .)
    AND             reduce using rule 4 (instruction -> NOP .)
    OR              reduce using rule 4 (instruction -> NOP .)
    XOR             reduce using rule 4 (instruction -> NOP .)
    NOR             reduce using rule 4 (instruction -> NOP .)
    ANDI            reduce using rule 4 (instruction -> NOP .)
    SLL             reduce using rule 4 (instruction -> NOP .)
    SRL             reduce using rule 4 (instruction -> NOP .)
    SRA             reduce using rule 4 (instruction -> NOP .)
    SLT             reduce using rule 4 (instruction -> NOP .)
    SLTI            reduce using rule 4 (instruction -> NOP .)
    SLTIU           reduce using rule 4 (instruction -> NOP .)
    BEQ             reduce using rule 4 (instruction -> NOP .)
    BNE             reduce using rule 4 (instruction -> NOP .)
    BLEZ            reduce using rule 4 (instruction -> NOP .)
    BGTZ            reduce using rule 4 (instruction -> NOP .)
    BLTZ            reduce using rule 4 (instruction -> NOP .)
    J               reduce using rule 4 (instruction -> NOP .)
    JAL             reduce using rule 4 (instruction -> NOP .)
    JR              reduce using rule 4 (instruction -> NOP .)
    JALR            reduce using rule 4 (instruction -> NOP .)
    $end            reduce using rule 4 (instruction -> NOP .)


state 32

    (15) instruction -> OR . register register register
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 64

state 33

    (17) instruction -> NOR . register register register
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 65

state 34

    (29) instruction -> BLTZ register . IDENTIFIER

    IDENTIFIER      shift and go to state 66


state 35

    (34) register -> REGPREFIX . NUMBER

    NUMBER          shift and go to state 67


state 36

    (10) instruction -> SUB register . register register
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 68

state 37

    (23) instruction -> SLTI register . register NUMBER
    (34) register -> . REGPREFIX NUMBER

    REGPREFIX       shift and go to state 35

    register                       shift and go to state 69

state 38

    (32) instruction -> JR register .

    IDENTIFIER      reduce using rule 32 (instruction -> JR register .)
    NOP             reduce using rule 32 (instruction -> JR register .)
    LW              reduce using rule 32 (instruction -> JR register .)
    SW              reduce using rule 32 (instruction -> JR register .)
    LUI             reduce using rule 32 (instruction -> JR register .)
    ADD             reduce using rule 32 (instruction -> JR register .)
    ADDU            reduce using rule 32 (instruction -> JR register .)
    SUB             reduce using rule 32 (instruction -> JR register .)
    SUBU            reduce using rule 32 (instruction -> JR register .)
    ADDI            reduce using rule 32 (instruction -> JR register .)
    ADDIU           reduce using rule 32 (instruction -> JR register .)
    AND             reduce using rule 32 (instruction -> JR register .)
    OR              reduce using rule 32 (instruction -> JR register .)
    XOR             reduce using rule 32 (instruction -> JR register .)
    NOR             reduce using rule 32 (instruction -> JR register .)
    ANDI            reduce using rule 32 (instruction -> JR register .)
    SLL             reduce using rule 32 (instruction -> JR register .)
    SRL             reduce using rule 32 (instruction -> JR register .)
    SRA             reduce using rule 32 (instruction -> JR register .)
    SLT             reduce using rule 32 (instruction -> JR register .)
    SLTI            reduce using rule 32 (instruction -> JR register .)
    SLTIU           reduce using rule 32 (instruction -> JR register .)
    BEQ             reduce using rule 32 (instruction -> JR register .)
    BNE             reduce using rule 32 (instruction -> JR register .)
    BLEZ            reduce using rule 32 (instruction -> JR register .)
    BGTZ            reduce using rule 32 (instruction -> JR register .)
    BLTZ            reduce using rule 32 (instruction -> JR register .)
    J               reduce using rule 32 (instruction -> JR register .)
    JAL             reduce using rule 32 (instruction -> JR register .)
    JR              reduce using rule 32 (instruction -> JR register .)
    JALR            reduce using rule 32 (instruction -> JR register .)
    $end            reduce using rule 32 (instruction -> JR register .)


state 39

    (27) instruction -> BLEZ register . IDENTIFIER

    IDENTIFIER      shift and go to state 70


state 40

    (21) instruction -> SRA register . register NUMBER
    (34) register -> . REGPREFIX NUMBER
